fixed the jumping on hoverering the textField

--- a/src/components/sass/login.module.scss
+++ b/src/components/sass/login.module.scss
@@ -17,6 +17,8 @@
     .textField {
         background-color: #f8f9fd;
         font-size: 1.25rem;
+        box-sizing: border-box;
+        height: 60px;
         // display: flex;
         padding: 1.25rem 5.25rem;
         // justify-content: start;
